syntax = "proto3";

service NodeService {
  rpc Join (JoinRequest) returns (JoinResponse);
  rpc Lookup (LookupRequest) returns (LookupResponse);
  rpc GetSuccessor (EmptyRequest) returns (NodeInfo);
  rpc GetPredecessor (EmptyRequest) returns (NodeInfo);
  rpc Ping (EmptyRequest) returns (PingResponse);
  rpc GetNodeMetrics (EmptyRequest) returns (MetricsResponse);
}

message JoinRequest {
  string nodeId = 1;
  string ip = 2;
  int32 port = 3;
}

message JoinResponse {
  string message = 1;
  string successorId = 2;
  string predecessorId = 3;
}

message LookupRequest {
  string key = 1;
  string requesterId = 2;
}

message LookupResponse {
  string nodeId = 1;
  string ip = 2;
  int32 port = 3;
  string chunkAvailability = 4;
  int32 load = 5;
}

message NodeInfo {
  string nodeId = 1;
  string ip = 2;
  int32 port = 3;
}

message EmptyRequest {}

message PingResponse {
  bool alive = 1;
}

message MetricsResponse {
  int32 load = 1;
  string chunkAvailability = 2;
  string uptime = 3;
}
